alteração do rodapé

--- a/index.html
+++ b/index.html
@@ -362,6 +362,10 @@
             </div>
 
         </div>
+         <div class="mt-8 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
+            &copy; 2025 Kevin França. Todos os direitos reservados. 
+            Desenvolvido por <a href="https://instagram.com/iamanaka" target="_blank" class="hover:text-white transition-colors">@iamanaka</a>
+        </div>
     </main>
 
     <!-- Import do Script -->
